@@ -4,6 +4,7 @@
       keeping "3.14" as one token. Also accept ',' as a decimal point.
     - Various improvements to capitalization in the Word tokenizer
     - Don't run the ReadLine UI if --stats is supplied
+    - Allow keeping the entire SQLite database in memory while running
 
 0.15 Thu Feb 18 23:55:19 GMT 2010
     - Allow specifying SQLite's cache size with --storage-args
